--- a/tablas.html
+++ b/tablas.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio de tablas</title>
+    <link rel="stylesheet" href="./main.css"/>
 </head>
-<style>
-    table,td,th{
-        border: 1px double blue;
-        border-collapse: collapse;
-    }
-</style>
+
 <body>
     <h1>Ejercicio con tablas</h1>
-    <table style="width: 100%">
+    <table>
         <th>
             Nombre
         </th>
